--- a/src/assets/css/output.css
+++ b/src/assets/css/output.css
@@ -618,6 +618,10 @@ video {
   display: inline-flex;
 }
 
+.table {
+  display: table;
+}
+
 .h-0 {
   height: 0px;
 }
@@ -830,6 +834,11 @@ video {
   padding-bottom: 0.75rem;
 }
 
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
+}
+
 .text-center {
   text-align: center;
 }
@@ -870,6 +879,10 @@ video {
 
 .font-bold {
   font-weight: 700;
+}
+
+.capitalize {
+  text-transform: capitalize;
 }
 
 .text-black {
