--- a/src/assets/css/output.css
+++ b/src/assets/css/output.css
@@ -572,10 +572,6 @@ video {
   top: 0.75rem;
 }
 
-.top-half {
-  top: calc((100% - 1.5rem) /2);
-}
-
 .z-0 {
   z-index: 0;
 }
@@ -647,21 +643,12 @@ video {
   height: 16rem;
 }
 
-.h-8 {
-  height: 2rem;
-}
-
 .h-full {
   height: 100%;
 }
 
 .h-screen {
   height: 100vh;
-}
-
-.h-max {
-  height: -webkit-max-content;
-  height: max-content;
 }
 
 .w-1\/2 {
@@ -701,16 +688,12 @@ video {
   width: 100vw;
 }
 
-.w-aside-open {
-  width: calc(100vw - var(--wAsideOpen));
+.min-w-28 {
+  min-width: 7rem;
 }
 
 .min-w-full {
   min-width: 100%;
-}
-
-.min-w-28 {
-  min-width: 7rem;
 }
 
 .max-w-xl {
@@ -727,10 +710,6 @@ video {
 
 .origin-404-last {
   transform-origin: 62% 71%;
-}
-
-.origin-center {
-  transform-origin: center;
 }
 
 .rotate-0 {
@@ -857,10 +836,6 @@ video {
   border-radius: 0.25rem;
 }
 
-.rounded-full {
-  border-radius: 9999px;
-}
-
 .rounded-lg {
   border-radius: 0.5rem;
 }
@@ -872,11 +847,6 @@ video {
 .bg-blue {
   --tw-bg-opacity: 1;
   background-color: rgb(51 95 138 / var(--tw-bg-opacity));
-}
-
-.bg-red-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 
 .bg-slate-100 {
@@ -909,10 +879,6 @@ video {
   padding: 2rem;
 }
 
-.p-1 {
-  padding: 0.25rem;
-}
-
 .p-2 {
   padding: 0.5rem;
 }
@@ -937,18 +903,13 @@ video {
   padding-bottom: 0.75rem;
 }
 
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
-}
-
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
 }
 
-.pb-7 {
-  padding-bottom: 1.75rem;
+.pr-10 {
+  padding-right: 2.5rem;
 }
 
 .text-center {
@@ -1015,22 +976,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.outline {
-  outline-style: solid;
-}
-
-.outline-1 {
-  outline-width: 1px;
-}
-
-.outline-black {
-  outline-color: #000;
-}
-
-.filter {
-  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .transition {
