--- a/src/assets/css/output.css
+++ b/src/assets/css/output.css
@@ -651,6 +651,11 @@ video {
   height: 100vh;
 }
 
+.h-max {
+  height: -webkit-max-content;
+  height: max-content;
+}
+
 .w-1\/2 {
   width: 50%;
 }
@@ -686,6 +691,22 @@ video {
 
 .w-screen {
   width: 100vw;
+}
+
+.w-8 {
+  width: 2rem;
+}
+
+.w-8\/20 {
+  width: 40%;
+}
+
+.w-9\/20 {
+  width: 45%;
+}
+
+.w-6\/20 {
+  width: 30%;
 }
 
 .min-w-28 {
@@ -768,6 +789,10 @@ video {
   flex-direction: column;
 }
 
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
 .items-end {
   align-items: flex-end;
 }
@@ -816,6 +841,14 @@ video {
   gap: 1.25rem;
 }
 
+.gap-y-2 {
+  row-gap: 0.5rem;
+}
+
+.gap-y-4 {
+  row-gap: 1rem;
+}
+
 .overflow-hidden {
   overflow: hidden;
 }
@@ -859,6 +892,21 @@ video {
   background-color: rgb(226 232 240 / var(--tw-bg-opacity));
 }
 
+.bg-blue-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(96 165 250 / var(--tw-bg-opacity));
+}
+
+.bg-blue-sky {
+  --tw-bg-opacity: 1;
+  background-color: rgb(85 213 224 / var(--tw-bg-opacity));
+}
+
+.bg-slate-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(148 163 184 / var(--tw-bg-opacity));
+}
+
 .bg-logo {
   background-image: url('../images/logo.png');
 }
@@ -881,6 +929,10 @@ video {
 
 .p-8 {
   padding: 2rem;
+}
+
+.p-4 {
+  padding: 1rem;
 }
 
 .px-2 {
@@ -910,6 +962,10 @@ video {
 
 .pr-10 {
   padding-right: 2.5rem;
+}
+
+.pb-20 {
+  padding-bottom: 5rem;
 }
 
 .text-center {
