--- a/src/assets/css/output.css
+++ b/src/assets/css/output.css
@@ -705,12 +705,20 @@ video {
   min-width: 100%;
 }
 
+.min-w-16 {
+  min-width: 4rem;
+}
+
 .max-w-xl {
   max-width: 36rem;
 }
 
 .shrink-0 {
   flex-shrink: 0;
+}
+
+.table-auto {
+  table-layout: auto;
 }
 
 .origin-404-first {
