--- a/src/assets/css/output.css
+++ b/src/assets/css/output.css
@@ -548,12 +548,20 @@ video {
   position: sticky;
 }
 
+.bottom-2 {
+  bottom: 0.5rem;
+}
+
 .left-0 {
   left: 0px;
 }
 
 .left-1\/4 {
   left: 25%;
+}
+
+.left-2 {
+  left: 0.5rem;
 }
 
 .right-3 {
@@ -703,10 +711,6 @@ video {
 
 .min-w-full {
   min-width: 100%;
-}
-
-.min-w-16 {
-  min-width: 4rem;
 }
 
 .max-w-xl {
@@ -942,6 +946,10 @@ video {
   padding-bottom: 5rem;
 }
 
+.pb-8 {
+  padding-bottom: 2rem;
+}
+
 .pr-10 {
   padding-right: 2.5rem;
 }
@@ -1007,9 +1015,18 @@ video {
   color: rgb(242 102 25 / var(--tw-text-opacity));
 }
 
+.text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
+}
+
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.opacity-0 {
+  opacity: 0;
 }
 
 .transition {
@@ -30012,6 +30029,10 @@ video {
 
 .group:hover .group-hover\:w-10 {
   width: 2.5rem;
+}
+
+.group:hover .group-hover\:opacity-100 {
+  opacity: 1;
 }
 
 .aria-\[current\=page\]\:rounded-l-full[aria-current=page] {
