--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -893,6 +893,10 @@ video {
   border-radius: 0.25rem;
 }
 
+.rounded-2xl {
+  border-radius: 1rem;
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
@@ -903,6 +907,15 @@ video {
 
 .border {
   border-width: 1px;
+}
+
+.border-b {
+  border-bottom-width: 1px;
+}
+
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
 .bg-blue {
@@ -993,6 +1006,10 @@ video {
 
 .pb-8 {
   padding-bottom: 2rem;
+}
+
+.pr-0 {
+  padding-right: 0px;
 }
 
 .pr-10 {
@@ -30055,9 +30072,8 @@ video {
   text-transform: capitalize;
 }
 
-.even\:bg-slate-200:nth-child(even) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
+.last\:border-0:last-child {
+  border-width: 0px;
 }
 
 .hover\:bg-blue-dark:hover {
